Fix flex wrap

--- a/src/viewers/document/DocumentViewer.less
+++ b/src/viewers/document/DocumentViewer.less
@@ -33,7 +33,7 @@
             > .quick-nav {
                 display: flex;
                 flex-direction: row;
-                flex-overflow: wrap;
+                flex-wrap: wrap;
                 align-items: center;
                 justify-content: space-between;
                 margin-top: @space-medium-4;
